--- a/styling/main.css
+++ b/styling/main.css
@@ -60,6 +60,10 @@
 	font-family: "unitled-sans";
 }
 
+body {
+  display:contents;
+}
+
 html,body {
   overflow-x:hidden;
 }
@@ -205,11 +209,13 @@ html,body {
   padding-bottom:0;
 }
 
-
-
 /* Header */
-body > header {
-  position:relative;
+#main-site-header {
+  position:static;
+  transition:all 0.2s ease;
+  top:-100px;
+
+  z-index:999;
 }
 
 #main-menu {
@@ -368,6 +374,8 @@ body > header {
   height:100vh;
   width:350px;
 
+  overflow-y:auto;
+
   top:0;
   inset-inline-end:-350px;
 
@@ -396,6 +404,30 @@ body > header {
 
 #cart-panel.active .layout {
   display: block;
+}
+
+.cart-grid-field {
+  display:grid;
+
+  grid-template-areas: "IMAGE BRAND" "IMAGE NAME" "IMAGE PRICE";
+}
+
+.cart-grid-field img {
+  grid-area: IMAGE;
+  
+  margin:5px 10px 5px 5px;
+}
+
+.cart-grid-field .cart-product-brand {
+  grid-area: BRAND;
+}
+
+.cart-grid-field .cart-product-name {
+  grid-area: NAME;
+}
+
+.cart-grid-field .cart-product-price {
+  grid-area: PRICE;
 }
 
 @media(max-width:768px) {
