--- a/styling/about-us.css
+++ b/styling/about-us.css
@@ -1,11 +1,11 @@
- /* ================= GLOBAL ================= */
+
 body {
   font-family: 'Segoe UI', sans-serif;
-  background-color: #f3f3ec;
-  color: #2f3e2e;
+  background-color: #DEDED2;
+  color: #1f3d2b;
 }
 
-/* ================= HERO SECTION ================= */
+/* ------------------ HERO SECTION ----------------- */
 .hero-section {
   min-height: 80vh;
   background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),
@@ -24,9 +24,9 @@ body {
   margin-top: 15px;
 }
 
-/* ================= FEATURES SECTION ================= */
+/* ------------------- FEATURES SECTION ---------------------*/
 .features-section {
-  background-color: #ebece3;
+  background-color: #DEDED2;
 }
 
 .section-title {
@@ -35,7 +35,7 @@ body {
 }
 
 .feature-card {
-  background-color: #ebece3;
+  background-color: #DEDED2;
   border: 1px solid #2f3e2e;
   border-radius: 12px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -51,9 +51,9 @@ body {
   color: #2f3e2e;
 }
 
-/* ================= PRODUCTS SECTION ================= */
+/* ------------------- PRODUCTS SECTION ----------------------*/
 .products-section {
-  background-color: #f3f3ec;
+  background-color: #DEDED2;
 }
 .product-card {
   background-color: #f4f6ee;
@@ -113,20 +113,7 @@ body {
   color: #fff;
 }
 
-/* 
-.product-card img {
-  border-radius: 12px;
-  border: 1px solid #2f3e2e;
-}
 
-.product-card h6 {
-  font-size: 0.95rem;
-  margin-top: 10px;
-}
-
-.product-card p {
-  font-size: 0.9rem;
-} */
 .glass-btn {
  background: transparent;
   border: 3px solid #2f5e4e;
@@ -139,17 +126,13 @@ body {
   
 }
 .glass-btn:hover {
-  border-width: 4px; 
+  border-width: 3px; 
 }
 .glass-btn:active {
   transform: scale(1.12);
 }
-/* .view-all-btn {
-  padding: 10px 28px;
-  border-radius: 50px;
-} */
 
-/* ================= SUBSCRIBE SECTION ================= */
+/* ------------------ SUBSCRIBE SECTION --------------------- */
 .subscribe-section {
   background-color: #1f3b2d;
 }
@@ -180,13 +163,11 @@ body {
   margin-bottom: 20px;
 }
 
-/* ================= IMPACT INITIATIVE SECTION ================= */
+/* ---------------- IMPACT INITIATIVE SECTION ------------------- */
 .impact-wrapper {
   background-color: #1f3b2d;
 }
-/* .container{
-  background-color: #6a6f3c;
-} */
+
 .impact-box {
   border: 2px solid #ffffff;
   border-radius: 20px;
