--- a/styling/category.css
+++ b/styling/category.css
@@ -1,10 +1,10 @@
-@font-face {
+/*@font-face {
   font-family: 'Untitled Sans';
   src: url('../fonts/Untitled-Sans.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
   font-display: swap; 
-}
+}*/
 
 /* ==================  grid  ================== */
 .row.g-4 {
