--- a/styling/main.css
+++ b/styling/main.css
@@ -216,6 +216,8 @@ html,body {
   top:-100px;
 
   z-index:999;
+
+  box-shadow:0 0 10px #000;
 }
 
 #main-menu {
@@ -531,4 +533,72 @@ body > footer ul{
   100% {
     transform:scale(1);
   }
+}
+
+/* Quantity */
+.quantity-section {
+  margin-top: 20px;
+}
+
+.quantity-label {
+  font-size: 16px;
+  color: #2f3b2d;
+  margin-bottom: 8px;
+  font-weight: 500;
+}
+
+.quantity-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  width: 170px;
+  height: 50px;
+
+  border: 3px solid #1d3a24;
+  border-radius: 18px;
+  padding: 0 14px;
+
+  background-color: #f4f6ee;
+}
+
+.qty-btn {
+  background: transparent;
+  border: none;
+  font-size: 26px;
+  font-weight: 500;
+  color: #1d3a24;
+  cursor: pointer;
+
+  width: 32px;
+  height: 32px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.qty-btn:active {
+  transform: scale(0.9);
+}
+
+#quantity {
+  font-size: 20px;
+  font-weight: 600;
+  color: #1d3a24;
+  min-width: 30px;
+  text-align: center;
+
+  border:none;
+  background:none;
+
+  appearance: textfield;
+
+  margin:5px;
+}
+
+.remove-from-cart {
+  border:none;
+
+  background:none;
 }
