--- a/styling/main.css
+++ b/styling/main.css
@@ -154,6 +154,39 @@ html,body {
   color:var(--primary-color) !important;
 }
 
+.is-loading {
+  position:relative;
+}
+
+.is-loading::before {
+  content:'';
+
+  background:#FFF6;
+  
+  position: absolute;
+  inset:0;
+
+  z-index:1;
+}
+
+.is-loading::after {
+  content:'';
+
+  width:40px;
+  height:40px;
+
+  border:4px solid #000;
+  border-top-color:#0000;
+
+  border-radius:90px;
+
+  position:absolute;
+  top:calc(50% - 20px);
+  left:calc(50% - 20px);
+
+  animation: spinning 1.0s linear infinite;
+}
+
 .labeled-input {
   position:relative;
 
@@ -532,6 +565,16 @@ body > footer ul{
 
   100% {
     transform:scale(1);
+  }
+}
+
+@keyframes spinning {
+  0% {
+    transform:rotate(0deg);
+  }
+
+  100% {
+    transform:rotate(360deg);
   }
 }
 
