--- a/styling/homepage.css
+++ b/styling/homepage.css
@@ -96,6 +96,9 @@ main .card .card-title {
 
 .product-img {
   width: 100%;
+  height:200px;
+
+  object-fit:cover;
   border-radius: 12px;
   object-fit: cover;
   margin-bottom: 12px;
