--- a/styling/main.css
+++ b/styling/main.css
@@ -453,7 +453,7 @@ html,body {
   
   margin:5px 10px 5px 5px;
 
-  height:200px;
+  height:100px;
   object-fit: cover;
 }
 
@@ -467,6 +467,24 @@ html,body {
 
 .cart-grid-field .cart-product-price {
   grid-area: PRICE;
+}
+
+#cart-products tr {
+  border-bottom:2px solid var(--primary-color);
+}
+
+#cart-products td:last-of-type {
+    text-align:end;
+
+    font-weight:bolder;
+
+    padding-inline-end:10px;
+}
+
+#cart-products .quantity-wrapper {
+  width:120px;
+
+  font-size:16px;
 }
 
 @media(max-width:768px) {
