Finished The Website

--- a/styling/main.css
+++ b/styling/main.css
@@ -75,6 +75,11 @@ html,body {
 }
 
 /* Menu */
+.child-menu {
+  display:block;
+
+  z-index:2;
+}
 .child-menu:not(.active) {
   display:none;
 }
@@ -242,6 +247,63 @@ html,body {
   padding-bottom:0;
 }
 
+/* Product Card */
+.product-card {
+  background-color: #f4f6ee;
+  border: 1.5px solid #1d3a24;
+  border-bottom: 5px solid #3f4d3b;
+
+  border-radius: 16px;
+  padding: 12px;
+  display: flex;
+  flex-direction: column;
+  transition: 0.3s;
+}
+
+.product-card:hover {
+  transform: translateY(-5px);
+}
+
+.product-img {
+  width: 100%;
+  height:200px;
+
+  object-fit:cover;
+  border-radius: 12px;
+  object-fit: cover;
+  margin-bottom: 12px;
+}
+
+.product-body {
+  flex-grow: 1;
+}
+
+.product-title {
+  font-weight: 600;
+  color: #2f3b2d;
+}
+
+.product-brand {
+  font-size: 12px;
+  color: #6b7b63;
+  text-transform: uppercase;
+}
+
+.product-price {
+  font-weight: 600;
+  color: #2f3b2d;
+}
+
+.product-btn {
+  border: 1.5px solid #2f3b2d;
+  border-radius: 30px;
+  padding: 8px 0;
+  background-color: transparent;
+  color: #2f3b2d;
+  font-weight: 500;
+  transition: 0.3s;
+}
+
 /* Header */
 #main-site-header {
   position:static;
@@ -360,51 +422,6 @@ html,body {
   color: currentColor !important;
 }
 
-#search-panel {
-  position:fixed;
-  top:0;
-  left:0;
-
-  height:100vh;
-
-  visibility: hidden;
-}
-
-#search-panel.active {
-  visibility: visible;
-}
-
-#search-panel > ul {
-  transition:all 0.3s ease;
-
-  inset:0;
-
-  background:#0004;
-
-  position: absolute;
-  top:100px;
-  height:calc(100% - 100px);
-
-  opacity:0;
-}
-
-#search-panel.active > ul {
-  opacity:1;
-}
-
-#search-panel > header { 
-  position:absolute;
-  top:-100px;
-
-  height:100px;
-
-  transition:all 0.3s ease;
-}
-
-#search-panel.active > header {
-  top:0;
-}
-
 #cart-panel {
   position:fixed;
   height:100vh;
@@ -434,7 +451,8 @@ html,body {
   display:none;
 }
 
-#cart-panel.active {
+#cart-panel.active,
+#cart-panel.active * {
   inset-inline-end:0;
 }
 
@@ -469,8 +487,16 @@ html,body {
   grid-area: PRICE;
 }
 
+#cart-products-table {
+  margin-bottom:20px;
+}
+
 #cart-products tr {
   border-bottom:2px solid var(--primary-color);
+}
+
+#cart-products tr td {
+  padding-block:20px;
 }
 
 #cart-products td:last-of-type {
