--- a/styling/category.css
+++ b/styling/category.css
@@ -20,6 +20,10 @@
   margin-top: 100px;
 }
 
+.product-grid-item:hover {
+  text-decoration: none;
+}
+
 .product-grid {
   display: flex;
   flex-wrap: wrap;
