--- a/styling/homepage.css
+++ b/styling/homepage.css
@@ -8,7 +8,7 @@
 
 	padding-block:20px;
 
-	background: url('../images/homepage-big.jpg') left center/cover;
+	background: url('../images/homepage-big.jpg') left center/cover fixed;
 }
 
 .bw-special-text-section h3 {
