--- a/styling/main.css
+++ b/styling/main.css
@@ -248,7 +248,7 @@ html,body {
 }
 
 /* Product Card */
-.product-card {
+.product-card:not(#collection-page .product-card,#category-page .product-card) {
   background-color: #f4f6ee;
   border: 1.5px solid #1d3a24;
   border-bottom: 5px solid #3f4d3b;
@@ -260,11 +260,11 @@ html,body {
   transition: 0.3s;
 }
 
-.product-card:hover {
+.product-card:not(#collection-page .product-card,#category-page .product-card):hover {
   transform: translateY(-5px);
 }
 
-.product-img {
+.product-img:not(#collection-page .product-img,#category-page .product-img) {
   width: 100%;
   height:200px;
 
